# PySpark_Transaction_Processor

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  detections_20250809_005524_636_0001.csv  main.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  transactions_chunk_20250809_005157_690.csv
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
config/: config.py  spark_config.py
docker/: Dockerfile  docker-compose.yml
setup/: complete_database_reset.sql  create_missing_tables.sql  create_tables_as_postgres.sql  create_tables_superuser.sql  databricks_setup.py  drop_and_recreate_tables.sql  fix_database_schema.sql  fix_permissions_and_create_tables.sql  fix_table_ownership_permissions.sql  postgres_setup.sql  setup.sh
src/mechanism_x/: __init__.py  data_ingestion.py  gdrive_reader.py
src/mechanism_y/: __init__.py  pattern_detector.py  result_writer.py  stream_processor.py
src/schemas/: __init__.py  transaction_schemas.py
src/utils/: __init__.py  logger.py  postgres_utils.py  s3_utils.py
tests/: test_mechanism_x.py
